--- a/小白推荐-二次修改版-宝塔版安装-详细教程【解决所有已知问题】.md
+++ b/小白推荐-二次修改版-宝塔版安装-详细教程【解决所有已知问题】.md
@@ -1,3 +1,5 @@
+小白福音
+
 前端安装参考教程：https://www.you12580.us/sspanelv3%E4%BA%8C%E6%AC%A1%E4%BF%AE%E6%94%B9%E7%89%88%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B%E5%8F%8A%E5%AE%89%E8%A3%85%E8%A7%86%E5%B1%8F%E6%95%99%E7%A8%8B%E3%80%90%E8%A7%A3%E5%86%B3%E6%89%80%E6%9C%89.html
 ***
 后端对接参考教程：
