--- a/宝塔版安装详细教程【解决所有已知问题】.md
+++ b/宝塔版安装详细教程【解决所有已知问题】.md
@@ -15,6 +15,8 @@ https://www.you12580.us/sspanel-mod-%E9%AD%94%E6%94%B9%E7%89%88-%E4%BA%8C%E6%AC%
 
 3.SSH安装 添加计划任务，输入 crontab -e 命令。这里如果不会使用请去宝塔里面直接改。地址是 /var/spool/cron/root 修改里面对应的信息就行。
 
-4.导入数据库如果不会使用命令建议在宝塔里面操作去这里 /www/wwwroot/你的网站目录/sql/glzjin_all.sql 下载到本地，然后在去phpadmin里面导入到数据库
+4.导入数据库如果不会使用命令建议在宝塔里面操作去这里 /www/wwwroot/你的网站目录/sql/glzjin_all.sql 下载到本地，然后在去phpadmin里面导入到数据库。
 
-5.
+5.后端shadowsocks配置 可以在宝塔 /root/shadowsocks/userapiconfig.py里面直接编辑免去使用命令行修改的麻烦
+
+6.前端网站配置直接宝塔进入文件管理-网站根目录【或者直接重命名文件为 .config.php 】  /www/wwwroot/你的网站目录/config/.config.php.example
