Updated SS PANEL 网站 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -1,10 +1,10 @@
-wiki参考https://github.com/zyl6698/ss-panel-v3-mod-with-f2fpay/wiki/%E5%AE%89%E8%A3%85%E9%AD%94%E6%94%B9%E5%89%8D%E7%AB%AF
+本Wiki参考于@zircon所写的[安装魔改前端](https://github.com/zyl6698/ss-panel-v3-mod-with-f2fpay/wiki/%E5%AE%89%E8%A3%85%E9%AD%94%E6%94%B9%E5%89%8D%E7%AB%AF)教程
 
 ### 安装面板程序
 web环境配置好后
 
-
-cd /你的网站目录  例：cd /www/wwwroot/你的网站目录
+```
+cd /你的网站目录  例：cd /www/wwwroot/你的网站目录  
 apt update
 apt install git -y
 git clone -b master https://github.com/NimaQu/ss-panel-v3-mod_Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
