Updated 多等級節點 (markdown)

--- a/多等級節點.md
+++ b/多等級節點.md
@@ -45,6 +45,7 @@
 `<p class="card-heading">超級VIP用户节点</p>`（顯示名稱）
 
 `{if $node_isv6[$prefix] == 0 && $node_class[$prefix]==2}`（[$prefix]==2為等級2節點）
+`{$id=1000}` 改为其他不重复任意数字
 
 # 用戶中心顯示：
 
