Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -1,4 +1,4 @@
-## 支付宝当面付
+# 支付宝当面付
 
 原文 <https://91vps.bid/2017/06/09/alipay_f2f_ss_panel_mod/>
 
@@ -37,7 +37,7 @@ $System_Config['merchant_private_key']='MIIExxxxxxxxxxxxxxxxxxx';
 
 
 
-## 易付通
+# 易付通
 
 在 https://pay.anypay.me 入网以后（可无视实名认证和备案号），找到网站授权信息里的**secret**和**accesskey** 信息保存
 
@@ -76,7 +76,7 @@ $System_Config['yft_accesskey']='';
 
 
 
-## 码支付
+# 码支付
 
 #### 对接 by [dumplin233](https://github.com/dumplin233) 教程 by [miku](https://github.com/xcxnig)
 ##### 优点是QQ和支付宝免手续费直接到账，缺点是微信需要58的授权费（终身授权）
@@ -118,7 +118,7 @@ $System_Config['yft_accesskey']='';
 
 
 
-## 黛米付
+# 黛米付
 
 注册签约地址：https://www.daimiyun.cn/register.php?aff=624
 
