養成全站ssl的好習慣

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -160,9 +160,9 @@ $System_Config['doiampay']=[
 后面的黛米付新增配置文件按照黛米付后台信息填写
 
 #### 4. 修改黛米付后台回调设置
-通知地址: ```http://您的域名/doiam/callback/{alipay,qqpay,wepay}```
+通知地址: ```https://您的域名/doiam/callback/{alipay,qqpay,wepay}```
 
-回调地址: ```http://您的域名/doiam/return/{alipay,qqpay,wepay}```
+回调地址: ```https://您的域名/doiam/return/{alipay,qqpay,wepay}```
 
 上述```{alipay,qqpay,wepay}```请按照接口类型酌情修改
 
