--- a/前端安装.md
+++ b/前端安装.md
@@ -90,6 +90,12 @@ php xcat initdownload         //下载ssr程式
 */1 * * * * php /网站目录/xcat checkjob
 */1 * * * * php /网站目录/xcat syncnode
 ```
+如果需要财务报表功能，可选添加以下三条
+```
+5 0 * * * php /网站目录/xcat sendFinanceMail_day
+6 0 * * 0 php /网站目录/xcat sendFinanceMail_week
+7 0 1 * * php /网站目录/xcat sendFinanceMail_month
+```
 如果要用到radius，需要添加下面这三条
 ```
 */1 * * * * php /网站目录/xcat synclogin
