--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -3,3 +3,14 @@
 * 检查网站是否启用 https
 * 检查 BaseUrl 是否为 https
 * 检查网站 ssl 证书是否有效
+
+### 更新訂閱鏈接失效解決方法：
+
+Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
+
+規則為：Disable Security
+```
+您的網域.com/ssr-download/ssr/*     （此為下載程式鏈接）
+您的網域.com/link/*                 （此為頂級域名訂閱鏈接，具體請按照您網域）
+www.您的網域.com/link/*             （此為二級域名訂閱鏈接，具體請按照您網域）
+```
