Updated 魔改常见问题解答 (markdown)

--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -14,3 +14,53 @@ Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
 您的網域.com/link/*                 （此為頂級域名訂閱鏈接，具體請按照您網域）
 www.您的網域.com/link/*             （此為二級域名訂閱鏈接，具體請按照您網域）
 ```
+
+###
+# 多等級節點：
+
+`路徑：/resources/views/material/user/node.tpl`
+
+```
+<p class="card-heading">VIP用户节点</p>
+{$id=1000}
+{foreach $node_prefix as $prefix => $nodes}
+{if $node_isv6[$prefix] == 0 && $node_class[$prefix]==1}
+{$id=$id+1}
+{foreach $nodes as $node}
+……忽略中間代碼……
+{/foreach}
+{/if}
+{/if}
+{/foreach}
+</div>
+</div>
+</div>
+{/if}
+{/foreach}
+```
+往下複製一份
+
+```
+<p class="card-heading">超級VIP用户节点</p>
+{$id=1000}
+{foreach $node_prefix as $prefix => $nodes}
+{if $node_isv6[$prefix] == 0 && $node_class[$prefix]==2}
+{$id=$id+1}
+{foreach $nodes as $node}
+……忽略中間代碼……
+{/foreach}
+{/if}
+{/if}
+{/foreach}
+</div>
+</div>
+</div>
+{/if}
+{/foreach}
+```
+以上修改重點：
+
+`<p class="card-heading">超級VIP用户节点</p>`（顯示名稱）
+
+`{if $node_isv6[$prefix] == 0 && $node_class[$prefix]==2}`（[$prefix]==2為等級2節點）
+`{$id=1000}` 改为其他不重复任意数字
