Updated 魔改常见问题解答 (markdown)

--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -15,8 +15,7 @@ Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
 www.您的網域.com/link/*             （此為二級域名訂閱鏈接，具體請按照您網域）
 ```
 
-###
-# 多等級節點：
+### 多等級節點：
 
 `路徑：/resources/views/material/user/node.tpl`
 
