Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -90,9 +90,8 @@ php xcat initdownload         //下载ssr程式
 */1 * * * * php /网站目录/xcat checkjob
 */1 * * * * php /网站目录/xcat syncnode
 ```
-如果需要财务报表功能，可选添加以下三条
+如果需要财务报表功能，可选添加以下三条（不支持易付通）
 
-暂不支持易付通，因为没有易付通的VPS以供测试，也不知道易付通的数据库长什么样。。。
 ```
 5 0 * * * php /网站目录/xcat sendFinanceMail_day
 6 0 * * 0 php /网站目录/xcat sendFinanceMail_week
