Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -39,4 +39,12 @@ git --version
 git commit -a -m 'some comment'
 ```
 
-### 最后查看 .config.php.example 是否有新的设置项，添加进原来的 .config.php
+
+### 迁移config
+执行命令
+
+`php /网站目录/xcat migrateConfig`
+
+迁移/更新之前会自动备份原config为.config.php.bak
+
+迁移/更新完成之后会输出新旧配置之间的差异
