Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -5,7 +5,7 @@ cd /www/wwwroot/你网站目录
 git pull
 ```
 
-##出錯提示1:```Peer reports incompatible or unsupported protocol version.```
+## 出錯提示1:```Peer reports incompatible or unsupported protocol version.```##
 
 原因：```Git版本過低```
 
@@ -40,7 +40,7 @@ git commit -a -m 'some comment'
 ```
 
 
-### 迁移config
+# 迁移config
 执行命令
 
 `php /网站目录/xcat migrateConfig`
