Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -90,7 +90,7 @@ php xcat initdownload         //下载ssr程式
 */1 * * * * php /网站目录/xcat checkjob
 */1 * * * * php /网站目录/xcat syncnode
 ```
-如果需要财务报表功能，可选添加以下三条（易付通的订单不会被统计）
+如果需要财务报表功能，可选添加以下三条
 
 ```
 5 0 * * * php /网站目录/xcat sendFinanceMail_day
