Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -16,6 +16,15 @@ mv tool/alipay-f2fpay vendor/
 mv -f tool/cacert.pem vendor/guzzle/guzzle/src/Guzzle/Http/Resources/
 mv -f tool/autoload_classmap.php vendor/composer/
 ```
+### 移除防跨目录移除工具(lnmp用户)
+
+该工具可以快速的移除防跨目录的限制
+
+`cd lnmp1.4/tools && ./remove_open_basedir_restriction.sh`
+
+### 开启scandir()函数(lnmp用户)
+
+`sed -i 's/,scandir//g' /usr/local/php/etc/php.ini`
 
 ###  伪静态
 
