Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -66,7 +66,7 @@ root /home/wwwroot/你的域名/public;
 mysql -u root -p                                       // 这里需要输入密码
 mysql>CREATE DATABASE database_name;                   //新建数据库
 mysql>use database_name;                               // 选择数据库
-mysql>source /网站目录/sql/glzjin_all.sql；  // 导入.sql文件
+mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
 
