--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -88,7 +88,7 @@ $System_Config['yft_accesskey']='';
 收款即时到帐，钱款将直接转入你的个人账户，手续费为0 !  (微信收款功能需要单独购买授权)
 
 ### 演示站：[点此查看](http://ssrstatus.tk/)
-用户名 demo 密码 demo
+用户名 admin 密码 admin
 
 ### 1.注册码支付
 [点此注册](https://codepay.fateqq.com/i/39756)
