--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -112,11 +112,12 @@ $System_Config['yft_accesskey']='';
 
 `yourdomain/codepay_callback`<br>
 
-同时，请保持`Always use HTTPS`这个选项为关闭状态
+(#### 以上在`842c39ecffa1670fd93553ee1b2dfc1101b0d0a3`版本之后已不需要
 
-#### 以上在`842c39ecffa1670fd93553ee1b2dfc1101b0d0a3`版本之后已不需要
+另外，最好在码支付后台管理通知地址处写上`yourdomain/codepay_callback`)
 
-另外，最好在码支付后台管理通知地址处写上`yourdomain/codepay_callback`
+同时，请保持`Always use HTTPS`这个选项为关闭状态并停用nginx的301重定向https
+
 
 
 
