Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -116,7 +116,7 @@ $System_Config['yft_accesskey']='';
 
 另外，最好在码支付后台管理通知地址处写上`yourdomain/codepay_callback`)
 
-同时，请保持`Always use HTTPS`这个选项为关闭状态并停用nginx的301重定向https
+同时，请保持`Always use HTTPS`这个选项为关闭状态并停用'nginx的301重定向https'
 
 
 
