Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -91,7 +91,7 @@ php xcat initdownload         //下载ssr程式
 
 ### 设置定时任务
 
-执行 crontab -e命令, 添加以下四段
+执行 crontab -e命令, 添加以下四条
 
 ```
 30 22 * * * php /网站目录/xcat sendDiaryMail
@@ -99,8 +99,12 @@ php xcat initdownload         //下载ssr程式
 */1 * * * * php /网站目录/xcat checkjob
 */1 * * * * php /网站目录/xcat syncnode
 ```
-如果需要财务报表功能，可选添加以下三条
-
+如果需要自动备份，可添加以下一条
+（此例为每20分钟备份1次）
+```
+*/20 * * * * php -n /网站目录/xcat backup
+```
+如果需要财务报表，可选添加以下三条
 ```
 5 0 * * * php /网站目录/xcat sendFinanceMail_day
 6 0 * * 0 php /网站目录/xcat sendFinanceMail_week
