Updated 魔改常见问题解答 (markdown)

--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -14,6 +14,7 @@ Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
 您的網域.com/link/*                 （此為頂級域名訂閱鏈接，具體請按照您網域）
 www.您的網域.com/link/*             （此為二級域名訂閱鏈接，具體請按照您網域）
 ```
+至于 Windows... 这里有详细的解释 https://docs.rixcloud.us/API/TLS-issue/
 
 ### 多等級節點：
 
