--- a/升級版本.md
+++ b/升級版本.md
@@ -43,7 +43,7 @@ git commit -a -m 'some comment'
 # 迁移config
 执行命令
 
-`php /网站目录/xcat migrateConfig`
+`php /网站目录/xcat update`
 
 迁移/更新之前会自动备份原config为.config.php.bak
 
