Updated 後端安裝（一鍵脚本） (markdown)

--- a/後端安裝（一鍵脚本）.md
+++ b/後端安裝（一鍵脚本）.md
@@ -2,7 +2,7 @@
 Github鏈接：https://github.com/YihanH/ss-panel-mod-v3-backend-server-install-scripts  
 ### 功能  
 * 更新系統軟體並安裝依賴
-* 矯正系統時區至Asia/Taipei
+* 可為節點伺服器選擇不同的系統時區
 * 安裝libsodium
 * 安裝並啓用bbr加速功能
 * 優化系統參數
