Updated 魔改常见问题解答 (markdown)

--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -4,6 +4,9 @@
 * 检查 BaseUrl 是否为 https
 * 检查网站 ssl 证书是否有效
 
+### 从其他版本(91vps,魔改原版）等更新来的，节点列表报错500
+* 请手动对照 .config.php.example 更新 .config.php，或者使用 `php xcat update` 自动更新 .config.php
+
 ### 更新訂閱鏈接失效解決方法：
 
 Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
@@ -14,7 +17,7 @@ Nginx請關閉WAF防火墻，如果有cloudflare請設置以下頁面規則
 您的網域.com/link/*                 （此為頂級域名訂閱鏈接，具體請按照您網域）
 www.您的網域.com/link/*             （此為二級域名訂閱鏈接，具體請按照您網域）
 ```
-至于 Windows... 这里有详细的解释 https://docs.rixcloud.us/API/TLS-issue/
+如果使用了 https ，请加上 tls1.0 协议，或者使用新版 ssr-windows
 
 ### 多等級節點：
 
