审计加个轮子网站

--- a/魔改常用审计规则.md
+++ b/魔改常用审计规则.md
@@ -26,7 +26,7 @@
 
 屏蔽轮子网站
 
-`(.*\.||)(dafahao|minghui|dongtaiwang|epochtimes|ntdtv|falundafa|wujieliulan)\.(org|com|net)`
+`(.*\.||)(dafahao|minghui|dongtaiwang|epochtimes|ntdtv|falundafa|wujieliulan|zhengjian)\.(org|com|net)`
 
 数据包明文匹配
 
