Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -81,7 +81,7 @@ $System_Config['yft_accesskey']='';
 # 码支付
 
 #### 对接 by [dumplin233](https://github.com/dumplin233) 教程 by [miku](https://github.com/xcxnig)
-##### 优点是QQ和支付宝免手续费直接到账，缺点是微信需要58的授权费（终身授权）
+##### 优点是QQ和支付宝免手续费直接到账，缺点是微信需要58的授权费（终身授权），而且网络情况不佳时掉单会很频繁。
 
 
 ##### 首先，你要有一个能上网的Windows系统的电脑（24小时开机，但配置不用高），用于支付宝和QQ收款的网站回调。
