Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -9,7 +9,7 @@
 
 在宝塔面板中找到php，点击设置
 
-在**禁用函数**一栏找到 **system** **proc_open** **proc_get_status** 去除它
+在**禁用函数**一栏找到 `system` `proc_open` `proc_get_status` 去除它
 
 在**性能调整**中，把 PHP 运行模式设置为 **静态**
 
