Updated 单端口多用户教程（赵大原版） (markdown)

--- a/单端口多用户教程（赵大原版）.md
+++ b/单端口多用户教程（赵大原版）.md
@@ -8,7 +8,7 @@
 <h3>四.操作步骤</h3>
 下面以添加一个 8080 端口号的单端口多用户承载端口为例。
 
-1.首先请您自己在您的站点上注册一个新用户。
+1.首先请您自己在您的站点上注册一个新用户，此用户等级最好大于所有节点等级。
 
 2.然后在管理员后台面板编辑一下用户。按照图上的指示编辑，然后保存。
 
