--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -184,3 +184,55 @@ $System_Config['doiampay']=[
 ```
 Written By Leo
 ```
+
+# ChenPay
+
+部分介绍：https://github.com/ChenSee/ss-panel-v3-mod_Uim-alipay
+
+### 使用步骤:
+#### 1. 设置配置文件
+在配置文件```/config/.config.php```中的```$System_Config['payment_system']```后插入以下内容:
+```
+//支付系统设置--------------------------------------------------------------------
+#取值 codepay,doiampay,paymentwall,zfbjk,spay,f2fpay,yftpay,none,f2fpay_codepay,chenAlipay
+$System_Config['payment_system']='chenAlipay';
+```
+
+#### 2. 导入数据
+- 使用一般mysql工具导入sql/config.sql即可（不会影响数据）
+
+#### 3. 获取支付宝COOKIE
+- 浏览器访问：https://mbillexprod.alipay.com/enterprise/tradeListQuery.htm
+- 登录支付宝账号
+- 浏览器按f12再刷新一下
+- 可以看到tradeListQuery.json
+- 点击它找到Cookie: 后面就是cookie全部复制到后台配置框内
+
+#### 4. 获取微信COOKIE
+- 浏览器访问：https://wx.qq.com
+- 手机扫码登录微信账号
+- 浏览器按f12再刷新一下
+- 可以看到webwxinit?r=*******
+- 点击它找到Cookie: 后面有cookie了
+
+#### 5. 获取微信&支付宝付款码
+- 直接到支付点加号
+- 找到收付款
+- 点击二维码收款
+- 设置金额（如果你想多金额）
+- 保存收款码
+- 访问：https://cli.im/deqr 上传付款码二维码
+- 解析出来的地址复制到后台管理的二维码地址框
+
+#### 6. 添加定时任务
+```
+# crontab -e
+*/1 * * * * php /你的目录/xcat alipay
+*/1 * * * * php /你的目录/xcat wxpay
+```
+
+### 特别说明:
+- 出现cookie失效有可能是服务器无法访问相关接口原因导致掉线
+- eamil通知必须要设置其中的一个邮箱
+- 刷新频率为10秒一次
+- 打算弄个xposed hook来实时生成付款码可以解决多个人无法同时支付问题
