--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -209,7 +209,7 @@ $System_Config['payment_system']='chenAlipay';
 - 点击它找到Cookie: 后面就是cookie全部复制到后台配置框内
 
 #### 4. 获取微信COOKIE
-- 浏览器访问：https://wx.qq.com
+- 浏览器访问：https://wx.qq.com（此地址必须设置到后台支付设置里，登录完成后会有所变更）
 - 手机扫码登录微信账号
 - 浏览器按f12再刷新一下
 - 可以看到webwxinit?r=*******
