--- a/前端安装.md
+++ b/前端安装.md
@@ -27,9 +27,9 @@ git clone -b master https://github.com/NimaQu/ss-panel-v3-mod_Uim.git tmp && mv 
 chown -R root:root *
 chmod -R 755 *
 chown -R www:www storage
-mv tool/alipay-f2fpay vendor/
-mv -f tool/cacert.pem vendor/guzzle/guzzle/src/Guzzle/Http/Resources/
-mv -f tool/autoload_classmap.php vendor/composer/
+cp tool/alipay-f2fpay vendor/
+cp -f tool/cacert.pem vendor/guzzle/guzzle/src/Guzzle/Http/Resources/
+cp -f tool/autoload_classmap.php vendor/composer/
 php composer.phar install
 ```
 ### 移除防跨目录移除工具(lnmp用户)
