--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -105,3 +105,7 @@ $System_Config['enable_flag']='false';
 如果有其他需求（比如喜欢把国家/地区名放到中间或后面、不想用空格），可以自行修改下方的$System_Config['flag_regex']
 
 目前只支持15个常用国家/地区，如果有其他国家/地区需求，把对应的国旗图标（jpg文件）扔进public/images/prefix里即可一劳永逸
+
+同步用户数据时出错:
+
+必须在 .config.php 填写邮件设置，否则报错。
