Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -28,7 +28,7 @@ chown -R root:root *
 chmod -R 755 *
 chown -R www:www storage
 php composer.phar install
-cp -f tool/alipay-f2fpay vendor/
+cp -r tool/alipay-f2fpay vendor/
 cp -f tool/cacert.pem vendor/guzzle/guzzle/src/Guzzle/Http/Resources/
 cp -f tool/autoload_classmap.php vendor/composer/
 ```
