Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -2,8 +2,10 @@ cd /www/wwwroot/你网站目录
 到站點根目錄(保證.git目錄存在)執行
 
 ```
+git reset HEAD --hard
 git pull
 ```
+注意:你会丢失目前自己的所有改动，请做好文件备份
 
 ## 出錯提示1:```Peer reports incompatible or unsupported protocol version.```##
 
