--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -206,14 +206,14 @@ $System_Config['payment_system']='chenAlipay';
 - 登录支付宝账号
 - 浏览器按f12再刷新一下
 - 可以看到tradeListQuery.json
-- 点击它找到Cookie: 后面就是cookie全部复制到后台配置框内
+- 点击header它找到Cookie: 后面就是cookie全部复制到后台配置框内
 
 #### 4. 获取微信COOKIE
 - 浏览器访问：https://wx.qq.com（此地址必须设置到后台支付设置里，登录完成后会有所变更）
 - 手机扫码登录微信账号
 - 浏览器按f12再刷新一下
 - 可以看到webwxinit?r=*******
-- 点击它找到Cookie: 后面有cookie了
+- 点击header它找到Cookie: 后面有cookie了
 
 #### 5. 获取微信&支付宝付款码
 - 直接到支付点加号
@@ -226,13 +226,16 @@ $System_Config['payment_system']='chenAlipay';
 
 #### 6. 添加定时任务
 ```
-# crontab -e
-*/1 * * * * php /你的目录/xcat alipay
-*/1 * * * * php /你的目录/xcat wxpay
+# 前台运行
+# php /你的目录/xcat alipay
+# php /你的目录/xcat wxpay
+# 后台运行
+# nohup php /你的目录/xcat alipay &
+# nohup php /你的目录/xcat wxpay &
 ```
 
 ### 特别说明:
+- 排队机制修改同一支付类型支持不同支付金额,同一支付金额不同支付类型
 - 出现cookie失效有可能是服务器无法访问相关接口原因导致掉线
 - eamil通知必须要设置其中的一个邮箱
 - 刷新频率为10秒一次
-- 打算弄个xposed hook来实时生成付款码可以解决多个人无法同时支付问题
