Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -235,6 +235,7 @@ $System_Config['payment_system']='chenAlipay';
 ```
 
 ### 特别说明:
+- 服务器时间必须要正确的中国时间，需要匹配支付宝微信时间
 - 排队机制修改同一支付类型支持不同支付金额,同一支付金额不同支付类型
 - 出现cookie失效有可能是服务器无法访问相关接口原因导致掉线
 - eamil通知必须要设置其中的一个邮箱
