Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -190,7 +190,9 @@ Written By Leo
 部分介绍：https://github.com/ChenSee/ss-panel-v3-mod_Uim-alipay
 
 ### 使用步骤:
-#### 1. 设置配置文件
+#### 1. 安装依赖
+```composer require chen-see/chen-pay```
+#### 2. 设置配置文件
 在配置文件```/config/.config.php```中的```$System_Config['payment_system']```后插入以下内容:
 ```
 //支付系统设置--------------------------------------------------------------------
@@ -198,24 +200,24 @@ Written By Leo
 $System_Config['payment_system']='chenAlipay';
 ```
 
-#### 2. 导入数据
+#### 3. 导入数据
 - 使用一般mysql工具导入sql/config.sql即可（不会影响数据）
 
-#### 3. 获取支付宝COOKIE
+#### 4. 获取支付宝COOKIE
 - 浏览器访问：https://mbillexprod.alipay.com/enterprise/tradeListQuery.htm
 - 登录支付宝账号
 - 浏览器按f12再刷新一下
 - 可以看到tradeListQuery.json
 - 点击header它找到Cookie: 后面就是cookie全部复制到后台配置框内
 
-#### 4. 获取微信COOKIE
+#### 5. 获取微信COOKIE
 - 浏览器访问：https://wx.qq.com（此地址必须设置到后台支付设置里，登录完成后会有所变更）
 - 手机扫码登录微信账号
 - 浏览器按f12再刷新一下
 - 可以看到webwxinit?r=*******
 - 点击header它找到Cookie: 后面有cookie了
 
-#### 5. 获取微信&支付宝付款码
+#### 6. 获取微信&支付宝付款码
 - 直接到支付点加号
 - 找到收付款
 - 点击二维码收款
@@ -224,7 +226,7 @@ $System_Config['payment_system']='chenAlipay';
 - 访问：https://cli.im/deqr 上传付款码二维码
 - 解析出来的地址复制到后台管理的二维码地址框
 
-#### 6. 添加定时任务
+#### 7. 添加定时任务
 ```
 # 前台运行
 # php /你的目录/xcat alipay
