Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -1,3 +1,4 @@
+#版本升级
 cd /www/wwwroot/你网站目录
 到站點根目錄(保證.git目錄存在)執行
 
@@ -5,7 +6,17 @@ cd /www/wwwroot/你网站目录
 git reset HEAD --hard
 git pull
 ```
-注意:你会丢失目前自己的所有改动，请做好文件备份
+注意:你会丢失除 config.php 外目前自己的所有改动，请做好文件备份
+
+2.迁移config
+执行命令
+
+`php /网站目录/xcat update`
+
+迁移/更新之前会自动备份原config为.config.php.bak
+
+迁移/更新完成之后会输出新旧配置之间的差异
+
 
 ## 出錯提示1:```Peer reports incompatible or unsupported protocol version.```##
 
@@ -40,13 +51,3 @@ git --version
 #提交自己的工作
 git commit -a -m 'some comment'
 ```
-
-
-# 迁移config
-执行命令
-
-`php /网站目录/xcat update`
-
-迁移/更新之前会自动备份原config为.config.php.bak
-
-迁移/更新完成之后会输出新旧配置之间的差异
