Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -187,11 +187,14 @@ Written By Leo
 
 # ChenPay
 
-部分介绍：https://github.com/ChenSee/ss-panel-v3-mod_Uim-alipay
+部分介绍：https://github.com/ChenSee/ss-panel-v3-mod_Uim-alipay-wxpay
 
 ### 使用步骤:
 #### 1. 安装依赖
-```composer require chen-see/chen-pay```
+```
+composer require chen-see/chen-pay
+# 如有提示按Y
+```
 #### 2. 设置配置文件
 在配置文件```/config/.config.php```中的```$System_Config['payment_system']```后插入以下内容:
 ```
