Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -194,6 +194,7 @@ Written By Leo
 ```
 composer require chen-see/chen-pay
 # 如有提示按Y
+# 如无法正常安装可执行rm -rf vendor/然后再composer update
 ```
 #### 2. 设置配置文件
 在配置文件```/config/.config.php```中的```$System_Config['payment_system']```后插入以下内容:
