Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -231,7 +231,7 @@ $System_Config['payment_system']='chenAlipay';
 - 访问：https://cli.im/deqr 上传付款码二维码
 - 解析出来的地址复制到后台管理的二维码地址框
 
-#### 7. 添加定时任务
+#### 7. 执行任务
 ```
 # 前台运行
 # php /你的目录/xcat alipay
