Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -239,6 +239,8 @@ $System_Config['payment_system']='chenAlipay';
 # 后台运行
 # nohup php /你的目录/xcat alipay &
 # nohup php /你的目录/xcat wxpay &
+# 日志查看
+# tail /你的目录/storage/logs/chenpay.log
 ```
 
 ### 特别说明:
