Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -3,7 +3,8 @@ cd /www/wwwroot/你网站目录
 到站點根目錄(保證.git目錄存在)執行
 
 ```
-git reset HEAD --hard
+git fetch --all
+git reset --hard origin/master
 git pull
 ```
 注意:你会丢失除 config.php 外目前自己的所有改动，请做好文件备份，如不想丢失改动，
