Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -95,10 +95,13 @@ php xcat initdownload         //下载ssr程式
 */1 * * * * php /网站目录/xcat checkjob
 */1 * * * * php /网站目录/xcat syncnode
 ```
-如果需要自动备份，可添加以下一条
-（此例为每20分钟备份1次）
+如果需要自动备份，可模仿以下两例，自行添加一条
 ```
+例1：每20分钟备份1次（若间隔大于60分钟，看例2）：
 */20 * * * * php -n /网站目录/xcat backup
+
+例2：每20小时备份1次（若间隔大于24小时，自行Google）：
+0 */20 * * * php /path/to/your/cron.php
 ```
 如果需要财务报表，可选添加以下三条
 ```
