--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -233,12 +233,20 @@ $System_Config['payment_system']='chenAlipay';
 
 #### 7. 执行命令
 ```
-# 前台运行
-# php /你的目录/xcat alipay
-# php /你的目录/xcat wxpay
-# 后台运行
-# nohup php /你的目录/xcat alipay &
-# nohup php /你的目录/xcat wxpay &
+# crontab -e
+* * * * * php /你的目录/xcat WxPay
+* * * * * sleep 10; php /你的目录/xcat WxPay
+* * * * * sleep 20; php /你的目录/xcat WxPay
+* * * * * sleep 30; php /你的目录/xcat WxPay
+* * * * * sleep 40; php /你的目录/xcat WxPay
+* * * * * sleep 50; php /你的目录/xcat WxPay
+
+* * * * * php /你的目录/xcat AliPay
+* * * * * sleep 10; php /你的目录/xcat AliPay
+* * * * * sleep 20; php /你的目录/xcat AliPay
+* * * * * sleep 30; php /你的目录/xcat AliPay
+* * * * * sleep 40; php /你的目录/xcat AliPay
+* * * * * sleep 50; php /你的目录/xcat AliPay
 # 日志查看
 # tail /你的目录/storage/logs/chenpay.log
 ```
