--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -234,19 +234,19 @@ $System_Config['payment_system']='chenAlipay';
 #### 7. 执行命令
 ```
 # crontab -e
-* * * * * php /你的目录/xcat WxPay
-* * * * * sleep 10; php /你的目录/xcat WxPay
-* * * * * sleep 20; php /你的目录/xcat WxPay
-* * * * * sleep 30; php /你的目录/xcat WxPay
-* * * * * sleep 40; php /你的目录/xcat WxPay
-* * * * * sleep 50; php /你的目录/xcat WxPay
+* * * * * php /你的目录/xcat wxpay
+* * * * * sleep 10; php /你的目录/xcat wxpay
+* * * * * sleep 20; php /你的目录/xcat wxpay
+* * * * * sleep 30; php /你的目录/xcat wxpay
+* * * * * sleep 40; php /你的目录/xcat wxpay
+* * * * * sleep 50; php /你的目录/xcat wxpay
 
-* * * * * php /你的目录/xcat AliPay
-* * * * * sleep 10; php /你的目录/xcat AliPay
-* * * * * sleep 20; php /你的目录/xcat AliPay
-* * * * * sleep 30; php /你的目录/xcat AliPay
-* * * * * sleep 40; php /你的目录/xcat AliPay
-* * * * * sleep 50; php /你的目录/xcat AliPay
+* * * * * php /你的目录/xcat alipay
+* * * * * sleep 10; php /你的目录/xcat alipay
+* * * * * sleep 20; php /你的目录/xcat alipay
+* * * * * sleep 30; php /你的目录/xcat alipay
+* * * * * sleep 40; php /你的目录/xcat alipay
+* * * * * sleep 50; php /你的目录/xcat alipay
 # 日志查看
 # tail /你的目录/storage/logs/chenpay.log
 ```
