--- a/升級版本.md
+++ b/升級版本.md
@@ -7,7 +7,7 @@ git fetch --all
 git reset --hard origin/master
 git pull
 ```
-注意:你会丢失除 config.php 外目前自己的所有改动，请做好文件备份，如不想丢失改动，
+注意:你会丢失除 .config.php 外目前自己的所有改动，请做好文件备份，如不想丢失改动，
 请参考这个文章[7.3 Git 工具 - 储藏与清理](https://git-scm.com/book/zh/v2/Git-%E5%B7%A5%E5%85%B7-%E5%82%A8%E8%97%8F%E4%B8%8E%E6%B8%85%E7%90%86)
 
 2.迁移config
