Updated 升級版本 (markdown)

--- a/升級版本.md
+++ b/升級版本.md
@@ -19,6 +19,7 @@ git pull
 
 迁移/更新完成之后会输出新旧配置之间的差异
 
+3.UI更新后请刷新浏览器缓存，有CDN需要清理CDN内缓存的CSS和JS文件
 
 ## 出錯提示1:```Peer reports incompatible or unsupported protocol version.```##
 
