--- a/前端安装.md
+++ b/前端安装.md
@@ -99,17 +99,17 @@ php xcat initdownload         //下载ssr程式
 */20 * * * * php -n /网站目录/xcat backup
 
 例2：每20小时备份1次（若间隔大于24小时，自行Google）：
-0 */20 * * * php /path/to/your/cron.php
+0 */20 * * * php -n /网站目录/xcat backup
 ```
 如果需要财务报表，可选添加以下三条
 ```
-5 0 * * * php -n /网站目录/xcat sendFinanceMail_day
-6 0 * * 0 php -n /网站目录/xcat sendFinanceMail_week
-7 0 1 * * php -n /网站目录/xcat sendFinanceMail_month
+5 0 * * * php /网站目录/xcat sendFinanceMail_day
+6 0 * * 0 php /网站目录/xcat sendFinanceMail_week
+7 0 1 * * php /网站目录/xcat sendFinanceMail_month
 ```
 如果需要检测被墙，添加以下一条
 ```
-*/1 * * * * php -n /网站目录/xcat detectGFW
+*/1 * * * * php /网站目录/xcat detectGFW
 ```
 如果要用到radius，需要添加下面这三条
 ```
