Updated 魔改常见问题解答 (markdown)

--- a/魔改常见问题解答.md
+++ b/魔改常见问题解答.md
@@ -102,4 +102,4 @@ $System_Config['enable_flag']='false';
 
 改为true
 
-如果有其他需求（比如喜欢把国家/地区名放到中间或后面、不想用空格），可以自行修改下方的$System_Config['flag_regex']
+如果有其他需求（比如喜欢把国家/地区名放到中间或后面、不想用空格），可以自行修改下方$System_Config['flag_regex']中的正则表达式
