Updated 後端一鍵安裝脚本 (markdown)

--- a/後端一鍵安裝脚本.md
+++ b/後端一鍵安裝脚本.md
@@ -8,7 +8,7 @@
 ### 安裝   
 `yum install wget -y && wget https://raw.githubusercontent.com/SuicidalCat/Airport-toolkit/master/ssr_node_c7.sh && chmod +x ssr_node_c7.sh && ./ssr_node_c7.sh`   
 ### 卸載   
-`\rm -rf /soft/shadowsocks`
+`systemctl disable ssr_node && \rm /usr/lib/systemd/system/ssr_node.service && \rm -rf /soft/shadowsocks`
 ### 設置開機啓動   
 `systemctl enable ssr_node`
 ### 服務啓動   
