--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -37,11 +37,28 @@ $System_Config['merchant_private_key']='MIIExxxxxxxxxxxxxxxxxxx';
 
 这个是你**自己的私钥**。
 
+# Trime pay
+- 注册地址 [https://portal.trimepay.com/#/auth/register/686](https://portal.trimepay.com/#/auth/register/686)  
+- 上面有AFF，对你没影响，可以删掉AFF
+- 费率2.5% 支付宝和微信签约分用分别79元，小站先签支付宝吧
 
+#### 1.通过上面注册地址完成注册
+#### 2.进入我的应用，点+号
+#### 3.点击 签约信息 右边 支付宝 付款签约
+#### 4.右边AppID: AppSecret: 复制一下
+#### 5.config.php 配置文件中：
+- $System_Config['payment_system']='trimepay';
+
+- $System_Config['trimepay_appid']='';				//AppID
+- $System_Config['trimepay_secret']='';				//AppSecret
+
+- 上面这两行，复制上一步抄的内容即可。
+
+- 如果你没开通微信，记得去把微信支付的图片注释一下
 
 # 易付通
-
-在 https://pay.anypay.me 入网以后（可无视实名认证和备案号），找到网站授权信息里的**secret**和**accesskey** 信息保存
+- 费率听说是3.0% 签约10元
+- 在 https://pay.anypay.me 入网以后（可无视实名认证和备案号），找到网站授权信息里的**secret**和**accesskey** 信息保存
 
 ![E.png](https://i.loli.net/2018/02/24/5a90f0a5a91ef.png)
 
@@ -191,3 +208,5 @@ $System_Config['payment_system']='chenAlipay';
 - 出现cookie失效有可能是服务器无法访问相关接口原因导致掉线
 - eamil通知必须要设置其中的一个邮箱
 - 刷新频率为10秒一次
+
+
