Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -38,25 +38,33 @@ $System_Config['merchant_private_key']='MIIExxxxxxxxxxxxxxxxxxx';
 这个是你**自己的私钥**。
 
 # Trime pay
-- 注册地址 [https://portal.trimepay.com/#/auth/register/686](https://portal.trimepay.com/#/auth/register/686)  
-- 上面有AFF，对你没影响，可以删掉AFF
-- 费率2.5% 支付宝和微信签约分用分别79元，小站先签支付宝吧
+- [签约地址](https://portal.trimepay.com/#/auth/register/134)
 
-#### 1.通过上面注册地址完成注册
-#### 2.进入我的应用，点+号
-#### 3.点击 签约信息 右边 支付宝 付款签约
-#### 4.右边AppID: AppSecret: 复制一下
-#### 5.config.php 配置文件中：
-- $System_Config['payment_system']='trimepay';
+1.通过上面注册地址完成注册
+2.进入我的应用，点+号
 
-- $System_Config['trimepay_appid']='';				//AppID
-- $System_Config['trimepay_secret']='';				//AppSecret
+![](https://i.loli.net/2019/01/05/5c307e23ad49b.png)
 
-- 上面这两行，复制上一步抄的内容即可。
+3.点击签约信息 ，在右边点击签约对应功能
 
-- 如果你没开通微信，记得去把微信支付的图片注释一下
+![](https://i.loli.net/2019/01/05/5c307e6524413.png)
+
+4.签约后复制 AppID 和 AppSecret
+
+5.填写 config.php 后即可使用
+
+```php
+$System_Config['payment_system']='trimepay';
+$System_Config['trimepay_appid']='';				//AppID
+$System_Config['trimepay_secret']='';				//AppSecret
+```
+
+
+
+
 
 # 易付通
+
 - 费率听说是3.0% 签约10元
 - 在 https://pay.anypay.me 入网以后（可无视实名认证和备案号），找到网站授权信息里的**secret**和**accesskey** 信息保存
 
