Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -38,20 +38,19 @@ $System_Config['merchant_private_key']='MIIExxxxxxxxxxxxxxxxxxx';
 这个是你**自己的私钥**。
 
 # Trime pay
-- [签约地址](https://portal.trimepay.com/#/auth/register/134)
+[注册地址](https://portal.trimepay.com/#/auth/register/134)
 
-1.通过上面注册地址完成注册
-2.进入我的应用，点+号
+1.注册完成后进入我的应用，点+号
 
 ![](https://i.loli.net/2019/01/05/5c307e23ad49b.png)
 
-3.点击签约信息 ，在右边点击签约对应功能
+2.点击签约信息 ，在右边点击签约对应功能
 
 ![](https://i.loli.net/2019/01/05/5c307e6524413.png)
 
-4.签约后复制 AppID 和 AppSecret
+3.签约后复制 AppID 和 AppSecret
 
-5.填写 config.php 后即可使用
+4.填写 config.php 后即可使用
 
 ```php
 $System_Config['payment_system']='trimepay';
