yum update ，yum install git -y  修改一下在centos执行的安装命令 yum

--- a/前端安装.md
+++ b/前端安装.md
@@ -21,8 +21,8 @@ web环境配置好后
 
 ```
 cd /你的网站目录  例：cd /www/wwwroot/你的网站目录  
-apt update
-apt install git -y
+yum update
+yum install git -y
 git clone -b master https://github.com/NimaQu/ss-panel-v3-mod_Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
 chown -R root:root *
 chmod -R 755 *
