--- a/後端一鍵安裝脚本.md
+++ b/後端一鍵安裝脚本.md
@@ -15,3 +15,6 @@
 `systemctl start ssr_node`
 ### 服務停止   
 `systemctl stop ssr_node`
+
+### 其他
+使用一键安装后，节点ID没有正确设置（会为0），需要手动进入`/soft/shadowsocks`中的 userapiconfig.py 手动修改ID  等待作者修复吧～
