--- a/前端安装.md
+++ b/前端安装.md
@@ -39,12 +39,24 @@ php composer.phar install
 
 `sed -i 's/,scandir//g' /usr/local/php/etc/php.ini`
 
-###  伪静态
+###  伪静态（nginx）
 
 ```
 location / {
   try_files $uri $uri/ /index.php$is_args$args;
   }
+```
+###  伪静态(apache)
+在/你的网站目录/public目录下，新建.htaccess文件，填入以下内容。
+```
+<IfModule mod_rewrite.c>
+ 
+  RewriteEngine On
+  RewriteRule ^aaa.htm$ index1.htm
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteRule ^(.*)$ index.php?/$1 [QSA,PT,L]
+</IfModule>
 ```
 ### 修改网站目录
 
