Edit server configuration

--- a/前端安装.md
+++ b/前端安装.md
@@ -39,24 +39,38 @@ php composer.phar install
 
 `sed -i 's/,scandir//g' /usr/local/php/etc/php.ini`
 
-###  伪静态（nginx）
-
+### Example Nginx Configuration
 ```
 location / {
-  try_files $uri $uri/ /index.php$is_args$args;
-  }
+    try_files $uri /index.php$is_args$args;
+}
+location ~ \.php {
+    try_files $uri =404;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+    fastcgi_index index.php;
+    fastcgi_pass 127.0.0.1:9000;
+    # Or use php-cgi pass as you wish
+    # fastcgi_pass unix:/tmp/php-cgi.sock;
+}
 ```
-###  伪静态(apache)
-在/你的网站目录/public目录下，新建.htaccess文件，填入以下内容。
+### Example Apache Rewrite Configuration
+Ensure your `.htaccess` and `index.php` files are in the same public-accessible directory. The `.htaccess` file should contain this code:
 ```
 <IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteRule ^aaa.htm$ index1.htm
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule ^(.*)$ index.php?/$1 [QSA,PT,L]
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ index.php [QSA,L]
 </IfModule>
 ```
+Make sure to enable Apache’s mod_rewrite module and your virtual host is configured with the AllowOverride option so that the `.htaccess` rewrite rules can be used:
+```
+AllowOverride All
+```
+
 ### 修改网站目录
 
 ```
