Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -2,7 +2,7 @@
 
 ### 安装面板程序
 
-### 配置PHP( 宝塔用户 )
+### 配置PHP (宝塔用户)
 
 宝塔用户可能会在**超过某一数量节点**的时候出现 **`Undefined offset :0 in 你的网站路径`** 这个错误，
 这个问题会导致后端无法进行连接，可以按照以下方法解决
@@ -70,6 +70,28 @@ Make sure to enable Apache’s mod_rewrite module and your virtual host is confi
 ```
 AllowOverride All
 ```
+### Example IIS Rewrite Configuration
+
+Ensure the `Web.config` and `index.php` files are in the same public-accessible directory. The `Web.config` file should contain this code:
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <system.webServer>
+        <rewrite>
+            <rules>
+                <rule name="slim" patternSyntax="Wildcard">
+                    <match url="*" />
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="index.php" />
+                </rule>
+            </rules>
+        </rewrite>
+    </system.webServer>
+</configuration>
+```
 
 ### 修改网站目录
 
@@ -82,9 +104,9 @@ AllowOverride All
 登陆数据库
 
 ```
-mysql -u root -p                                       // 这里需要输入密码
-mysql>CREATE DATABASE database_name;                   //新建数据库
-mysql>use database_name;                               // 选择数据库
+mysql -u root -p                           // 这里需要输入密码
+mysql>CREATE DATABASE database_name;       // 新建数据库
+mysql>use database_name;                   // 选择数据库
 mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
