--- a/后端一键安装脚本.md
+++ b/后端一键安装脚本.md
@@ -1,19 +1,19 @@
 支持系统：CentOS 7 x64   
 脚本功能：   
-* 可選配置節點為WEBAPI模式或SQL模式
-* 可選配置單端口多用戶
-* 可選啓用BBR（from mainline kernel）
-* 可選注冊為系統服務
-## 食用指南   
-### 安裝   
+* 可选配置节点为的WebAPI模式或SQL模式
+* 可选配置单端口多用户
+* 可选启用BBR（from mainline kernel）
+* 可选注册为系统服务
+## 使用指南   
+### 安装   
 `yum install wget -y && wget https://raw.githubusercontent.com/SuicidalCat/Airport-toolkit/master/ssr_node_c7.sh && chmod +x ssr_node_c7.sh && ./ssr_node_c7.sh`   
-### 卸載   
+### 卸载  
 `systemctl disable ssr_node && \rm /usr/lib/systemd/system/ssr_node.service && \rm -rf /soft/shadowsocks`
-### 設置開機啓動   
+### 设置开机启动   
 `systemctl enable ssr_node`
-### 服務啓動   
+### 服务启动   
 `systemctl start ssr_node`
-### 服務停止   
+### 服务停止   
 `systemctl stop ssr_node`
 
 ### 其他
