Updated 升級版本 (markdown)

--- a/升级版本.md
+++ b/升级版本.md
@@ -1,6 +1,6 @@
 # 版本升级
 cd /www/wwwroot/你网站目录
-到站點根目錄(保證.git目錄存在)執行
+到站点根目录(保证.git目录存在)执行
 
 ```
 git fetch --all
@@ -8,7 +8,7 @@ git reset --hard origin/master
 git pull
 ```
 注意:你会丢失除 .config.php 外目前自己的所有改动，请做好文件备份，如不想丢失改动，
-请参考这个文章[7.3 Git 工具 - 储藏与清理](https://git-scm.com/book/zh/v2/Git-%E5%B7%A5%E5%85%B7-%E5%82%A8%E8%97%8F%E4%B8%8E%E6%B8%85%E7%90%86)
+请参考这个文章[7.3 Git 工具- 储藏与清理](https://git-scm.com/book/zh/v2/Git-%E5%B7%A5%E5%85%B7-%E5%82% A8%E8%97%8F%E4%B8%8E%E6%B8%85%E7%90%86)
 
 2.迁移config
 执行命令
@@ -21,18 +21,18 @@ git pull
 
 #### 3.UI更新后请刷新浏览器缓存，有CDN需要清理CDN内缓存的CSS和JS文件，同时检查并清除nginx缓存
 
-## 出錯提示1:```Peer reports incompatible or unsupported protocol version.```##
+## 出错提示1:```Peer reports incompatible or unsupported protocol version.```##
 
-原因：```Git版本過低```
+原因：```Git版本过低```
 
-解決方法：
+解决方法：
 
-1、安裝所需軟體包
+1、安装所需软体包
 ```
-yum install curl-devel expat-devel gettext-devel openssl-devel zlib-devel 
+yum install curl-devel expat-devel gettext-devel openssl-devel zlib-devel
 yum install gcc perl-ExtUtils-MakeMaker
 ```
-2、下載&安裝
+2、下载&安装
 ```
 cd /usr/src
 wget https://www.kernel.org/pub/software/scm/git/git-2.7.3.tar.gz
@@ -43,7 +43,7 @@ make prefix=/usr/local/git install
 echo "export PATH=$PATH:/usr/local/git/bin" >> /etc/bashrc
 source /etc/bashrc
 ```
-3、檢查版本：```2.X.X版本即可```
+3、检查版本：```2.X.X版本即可```
 ```
 git --version
 ```
