修改Ubuntu/Debian系安装wget命令

--- a/后端一键安装脚本.md
+++ b/后端一键安装脚本.md
@@ -8,7 +8,7 @@
 ### 安装 For CentOS 7 x64   
 `yum install wget -y && wget https://raw.githubusercontent.com/SuicidalCat/Airport-toolkit/master/ssr_node_c7.sh && chmod +x ssr_node_c7.sh && ./ssr_node_c7.sh`   
 ### 安装 For Ubuntu 18.04 x64   
-`yum install wget -y && wget https://raw.githubusercontent.com/SuicidalCat/Airport-toolkit/master/ssr_node_u18.sh && chmod +x ssr_node_u18.sh && ./ssr_node_u18.sh`   
+`apt-get install wget -y && wget https://raw.githubusercontent.com/SuicidalCat/Airport-toolkit/master/ssr_node_u18.sh && chmod +x ssr_node_u18.sh && ./ssr_node_u18.sh`   
 ### 卸载  
 `systemctl disable ssr_node && \rm /usr/lib/systemd/system/ssr_node.service && \rm -rf /soft/shadowsocks`
 ### 设置开机启动   
