Updated 升级版本 (markdown)

--- a/升级版本.md
+++ b/升级版本.md
@@ -21,7 +21,7 @@ git pull
 
 #### 3.UI更新后请刷新浏览器缓存，有CDN需要清理CDN内缓存的CSS和JS文件，同时检查并清除nginx缓存
 
-#### [新版index编译教程](https://github.com/Anankke/ss-panel-v3-mod_Uim/wiki/%E6%96%B0%E7%89%88Index%E7%BC%96%E8%AF%91%E6%95%99%E7%A8%8B)
+#### [新版index编译教程](https://github.com/Anankke/ss-panel-v3-mod_Uim/wiki/%E6%96%B0%E7%89%88Index%E7%BC%96%E8%AF%91%E6%95%99%E7%A8%8B) 适用于dev，master未更新
 
 ## 出错提示1:```Peer reports incompatible or unsupported protocol version.```##
 
