Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -109,6 +109,10 @@ vi config/.config.php
 lnmp restart
 ```
 
+### 安装NodeJS
+
+教程：https://github.com/nodesource/distributions/blob/master/README.md
+
 ### 创建管理员并同步用户
 
 ```
@@ -117,6 +121,7 @@ php xcat syncusers            //同步用户
 php xcat initQQWry            //下载IP解析库
 php xcat resetTraffic         //重置流量
 php xcat initdownload         //下载ssr程式
+php xcat npmbuild             //构建index
 ```
 
 ### 设置定时任务
