--- a/前端安装.md
+++ b/前端安装.md
@@ -109,10 +109,6 @@ vi config/.config.php
 lnmp restart
 ```
 
-### 安装NodeJS
-
-教程：https://github.com/nodesource/distributions/blob/master/README.md
-
 ### 创建管理员并同步用户
 
 ```
@@ -158,3 +154,7 @@ php xcat npmbuild             //构建index
 */1 * * * * php /网站目录/xcat syncvpn
 */1 * * * * php -n /网站目录/xcat syncnas
 ```
+
+### 如果需要进行前端开发，还需安装NodeJS
+
+教程：https://github.com/nodesource/distributions/blob/master/README.md
