添加两个一键脚本

--- a/锐速等加速工具安装教程.md
+++ b/锐速等加速工具安装教程.md
@@ -1,3 +1,10 @@
-1.需要的是后端安装or前端安装
-2.是否先安装原来的前端安装教程，然后在装锐速后端or前端？
-3.这只是个提议，先做模板处理，安装方法待大神添加。。。
+锐速一键脚本:
+'''
+yum -y install wget && wget -N --no-check-certificate https://github.com/91yun/serverspeeder/raw/master/serverspeeder.sh && bash serverspeeder.sh
+'''
+BBR一键脚本
+'''
+	
+wget -N --no-check-certificate "https://github.com/cx9208/bbrplus/raw/master/ok_bbrplus_centos.sh" && chmod +x ok_bbrplus_centos.sh && ./ok_bbrplus_centos.sh
+'''
+
