Revert 341c953c716a81c9f71b6a6b5d0153980ca5793a...32e4923caf9e00ff1a776f1c08d1bd97dee83feb on 前端安装

--- a/前端安装.md
+++ b/前端安装.md
@@ -19,8 +19,8 @@
 
 web环境配置好后
 
-```bash
-cd /你的网站目录  # 例：cd /www/wwwroot/你的网站目录  
+```
+cd /你的网站目录  例：cd /www/wwwroot/你的网站目录  
 yum update
 yum install git -y
 git clone -b master https://github.com/Anankke/ss-panel-v3-mod_Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
@@ -39,15 +39,15 @@ php composer.phar install
 
 `sed -i 's/,scandir//g' /usr/local/php/etc/php.ini`
 
-### 示例Nginx配置
-```nginx
+### Example Nginx Configuration
+```
 location / {
     try_files $uri /index.php$is_args$args;
 }
 ```
-### 示例Apache重写配置
-确保您的`.htaccess`和`index.php`文件位于同一个公共可访问目录中。 `.htaccess`文件应该包含以下代码: 
-```apache
+### Example Apache Rewrite Configuration
+Ensure your `.htaccess` and `index.php` files are in the same public-accessible directory. The `.htaccess` file should contain this code:
+```
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -55,14 +55,14 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [QSA,L]
 </IfModule>
 ```
-确保启用Apache的mod_rewrite模块，并使用AllowOverride选项配置虚拟主机，以便可以使用`.htaccess`重写规则：
-```apache
+Make sure to enable Apache’s mod_rewrite module and your virtual host is configured with the AllowOverride option so that the `.htaccess` rewrite rules can be used:
+```
 AllowOverride All
 ```
-### 示例IIS重写配置
+### Example IIS Rewrite Configuration
 
-确保`Web.config`和`index.php`文件位于同一个公共可访问目录中。 `Web.config`文件应包含此代码:
-```xml
+Ensure the `Web.config` and `index.php` files are in the same public-accessible directory. The `Web.config` file should contain this code:
+```
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
@@ -84,7 +84,7 @@ AllowOverride All
 
 ### 修改网站目录
 
-```bash
+```
 /你的网站目录/public;
 ```
 
@@ -92,39 +92,32 @@ AllowOverride All
 
 登陆数据库
 
-```bash
-mysql -u root -p                           # 这里需要输入密码
 ```
-```mysql
-CREATE DATABASE 数据库名;       # 新建数据库
-use 数据库名;                   # 选择数据库
-\. /网站目录/sql/glzjin_all.sql;      # 导入.sql文件
+mysql -u root -p                           // 这里需要输入密码
+mysql>CREATE DATABASE database_name;       // 新建数据库
+mysql>use database_name;                   // 选择数据库
+mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
+
 ```
 
 ### 配置 sspanel
 
-```bash
+```
 cd /网站目录
 cp config/.config.php.example config/.config.php
 vi config/.config.php
 lnmp restart
 ```
 
-### 安装NodeJS
-
-```bash
-wget -O- https://raw.githubusercontent.com/star2000/scripts/master/linux/安装nodejs.sh | bash
-```
-
 ### 创建管理员并同步用户
 
-```bash
-php xcat createAdmin          #创建管理员
-php xcat syncusers            #同步用户
-php xcat initQQWry            #下载IP解析库
-php xcat resetTraffic         #重置流量
-php xcat initdownload         #下载ssr程式
-php xcat npmbuild             #构建index
+```
+php xcat createAdmin          //创建管理员
+php xcat syncusers            //同步用户
+php xcat initQQWry            //下载IP解析库
+php xcat resetTraffic         //重置流量
+php xcat initdownload         //下载ssr程式
+php xcat npmbuild             //构建index
 ```
 
 ### 设置定时任务
@@ -161,3 +154,7 @@ php xcat npmbuild             #构建index
 */1 * * * * php /网站目录/xcat syncvpn
 */1 * * * * php -n /网站目录/xcat syncnas
 ```
+
+### 如果需要进行前端开发，还需安装NodeJS
+
+教程：https://github.com/nodesource/distributions/blob/master/README.md
