--- a/前端安装.md
+++ b/前端安装.md
@@ -117,7 +117,6 @@ php xcat syncusers            //同步用户
 php xcat initQQWry            //下载IP解析库
 php xcat resetTraffic         //重置流量
 php xcat initdownload         //下载ssr程式
-php xcat npmbuild             //构建index
 ```
 
 ### 设置定时任务
@@ -158,3 +157,5 @@ php xcat npmbuild             //构建index
 ### 如果需要进行前端开发，还需安装NodeJS
 
 教程：https://github.com/nodesource/distributions/blob/master/README.md
+
+安装NodeJS后才可以使用`php xcat npmbuild`进行构建
