Updated 后端一键安装脚本 (markdown)

--- a/后端一键安装脚本.md
+++ b/后端一键安装脚本.md
@@ -2,7 +2,7 @@
 脚本功能：   
 * 可选配置节点为WebAPI模式或SQL模式
 * 可选配置单端口多用户
-* 可选启用BBR（from mainline kernel）
+* 可选启用BBR（using mainline kernel）
 * 可选注册为系统服务
 ## 使用指南   
 ### 安装 For CentOS 7 x64   
