Updated 后端一键安装脚本 (markdown)

--- a/后端一键安装脚本.md
+++ b/后端一键安装脚本.md
@@ -1,6 +1,6 @@
 支持系统：CentOS 7 x64 & Ubuntu 18.04 x64    
 脚本功能：   
-* 可选配置节点为WebAPI模式或SQL模式
+* 可选配置节点为WebAPI模式或MySQL模式
 * 可选配置单端口多用户
 * 可选启用BBR（using mainline kernel）
 * 可选注册为系统服务
