Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -2,7 +2,8 @@
 
 原文 <https://91vps.bid/2017/06/09/alipay_f2f_ss_panel_mod/>
 
-如需代签约当面付请Telegram联系 [錢爸爸](https://t.me/galaxyq)
+当面付代签约购买地址：
+https://shop.114514.cloud/cart.php?gid=9
 
 #### 支付宝付款接口配置
 
