Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -1,5 +1,7 @@
 本Wiki参考于@zircon所写的[安装魔改前端](https://github.com/zyl6698/ss-panel-v3-mod-with-f2fpay/wiki/%E5%AE%89%E8%A3%85%E9%AD%94%E6%94%B9%E5%89%8D%E7%AB%AF)教程
 
+其他教程：https://blog.anank.ke/w/SSPanel_with_LNMP
+
 ## 请不要移除页脚 staff 声明，请尊重开发成员劳动成果。
 
 ### 安装面板程序
