Updated 支付系统对接教程 (markdown)

--- a/支付系统对接教程.md
+++ b/支付系统对接教程.md
@@ -210,6 +210,9 @@ $System_Config['payment_system']='chenAlipay';
 # tail /你的目录/storage/logs/chenpay.log
 ```
 
+# 番茄云支付
+对接教程请前往 https://swapidc.fanqieui.com/?t/329.html
+
 ### 特别说明:
 - 服务器时间必须要正确的中国时间，需要匹配支付宝微信时间
 - 排队机制修改同一支付类型支持不同支付金额,同一支付金额不同支付类型
