Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -29,6 +29,8 @@ git clone -b master https://github.com/Anankke/ss-panel-v3-mod_Uim.git tmp && mv
 chown -R root:root *
 chmod -R 755 *
 chown -R www:www storage
+wget https://getcomposer.org/installer -O composer.phar
+php composer.phar
 php composer.phar install
 ```
 ### 移除防跨目录移除工具(lnmp用户)
