--- a/前端安装.md
+++ b/前端安装.md
@@ -15,7 +15,7 @@ LNMP 版教程：https://blog.anank.ke/w/SSPanel_with_LNMP
 
 在**性能调整**中，把 PHP 运行模式设置为 **静态**
 
-在**配置修改**中 按 Ctrl+F 搜索 `display_errors =` 改为 Off 后保存
+在**配置文件**中 按 Ctrl+F 搜索 `display_errors =` 改为 Off 后保存
 
 ![img](https://i.loli.net/2018/04/06/5ac64a16dbeaf.png)
 
