Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -108,7 +108,7 @@ mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
 cd /网站目录
-cp config/.config.php.example config/.config.php
+cp config/.config.php.example.php config/.config.php
 vi config/.config.php
 lnmp restart
 ```
@@ -163,3 +163,5 @@ php xcat initdownload         //下载ssr程式
 教程：https://github.com/nodesource/distributions/blob/master/README.md
 
 安装NodeJS后才可以使用`php xcat npmbuild`进行构建
+
+ps：建议使用ubentu16.04，效率和稳定并存
