cp config/.config.php.example(这里多个php会导致小白无法正确copy文件) config/.config.php

--- a/前端安装.md
+++ b/前端安装.md
@@ -108,7 +108,7 @@ mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
 cd /网站目录
-cp config/.config.php.example.php config/.config.php
+cp config/.config.php.example config/.config.php
 vi config/.config.php
 lnmp restart
 ```
