--- a/前端安装.md
+++ b/前端安装.md
@@ -25,7 +25,7 @@ web环境配置好后
 cd /你的网站目录  例：cd /www/wwwroot/你的网站目录  
 yum update
 yum install git -y
-git clone -b master https://github.com/Anankke/ss-panel-v3-mod_Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
+git clone -b master https://github.com/Anankke/SSPanel-Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
 chown -R root:root *
 chmod -R 755 *
 chown -R www:www storage
@@ -108,7 +108,7 @@ mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
 cd /网站目录
-cp config/.config.php.example.php config/.config.php
+cp config/.config.example.php config/.config.php
 vi config/.config.php
 lnmp restart
 ```
@@ -164,4 +164,4 @@ php xcat initdownload         //下载ssr程式
 
 安装NodeJS后才可以使用`php xcat npmbuild`进行构建
 
-ps：建议使用ubentu16.04，效率和稳定并存
+PS：建议使用 Debian9，效率和稳定并存
