--- a/前端安装.md
+++ b/前端安装.md
@@ -1,5 +1,7 @@
 LNMP 版教程：https://blog.anank.ke/w/SSPanel_with_LNMP
 
+完整版宝塔教程：https://blog.anank.ke/w/SSPanel_with_DROP_DATABASE_BT
+
 ## 请不要移除页脚 staff 声明，请尊重开发成员劳动成果。
 
 ### 安装面板程序
