--- a/前端安装.md
+++ b/前端安装.md
@@ -110,8 +110,8 @@ mysql>source /网站目录/sql/glzjin_all.sql;  // 导入.sql文件
 
 ```
 cd /网站目录
-cp config/.config.example.php config/.config.php
-vi config/.config.php
+cp ./config/.config.example.php config/.config.php
+vi ./config/.config.php
 lnmp restart
 ```
 
