Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -4,6 +4,8 @@ LNMP 版教程：https://blog.anank.ke/w/SSPanel_with_LNMP
 
 ## 请不要移除页脚 staff 声明，请尊重开发成员劳动成果。
 
+### 请不要移除登录\注册\用户页面页脚 staff 声明
+
 ### 安装面板程序
 
 ### 配置PHP (宝塔用户)
