Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -1,10 +1,18 @@
-LNMP 版教程：https://blog.anank.ke/w/SSPanel_with_LNMP
+## LNMP 版教程：
 
-完整版宝塔教程：https://blog.anank.ke/w/SSPanel_with_DROP_DATABASE_BT
+https://blog.anank.ke/w/SSPanel_with_LNMP
+
+## 完整版宝塔教程：
+
+https://blog.anank.ke/w/SSPanel_with_DROP_DATABASE_BT
 
 ## 请不要移除页脚 staff 声明，请尊重开发成员劳动成果。
 
-### 请不要移除登录\注册\用户页面页脚 staff 声明
+## 请不要移除登录\注册\用户页面页脚 staff 声明
+
+
+***
+以下是老教程（不完整）
 
 ### 安装面板程序
 
@@ -168,4 +176,4 @@ php xcat initdownload         //下载ssr程式
 
 安装NodeJS后才可以使用`php xcat npmbuild`进行构建
 
-PS：建议使用 Debian9，效率和稳定并存
+PS：建议使用 Debian 9，效率和稳定并存
