Updated 魔改常用审计规则 (markdown)

--- a/魔改常用审计规则.md
+++ b/魔改常用审计规则.md
@@ -42,5 +42,11 @@
 
 可基本屏蔽掉迅雷的网站，并且在全局模式下会影响迅雷的下载能力
 
+屏蔽轮子网站
+
+`(.*\.||)(dafahao|minghui|dongtaiwang|epochtimes|ntdtv|falundafa|wujieliulan|zhengjian)\.(org|com|net)`
+
+数据包明文匹配
+
 # 屏蔽后显示的页面修改
 如果您想自定义这个阻断页面的内容，请在每个后端目录下，复制 `detect.html` 为 `user-detect.html` 然后修改 `user-detect.html` ，重启后端即可自定义。
