--- a/前端安装.md
+++ b/前端安装.md
@@ -10,6 +10,7 @@ https://blog.anank.ke/w/SSPanel_with_DROP_DATABASE_BT
 
 ## 请不要移除登录\注册\用户页面页脚 staff 声明
 
+## 请自己自行安装 composer 进行依赖安装
 
 ***
 以下是老教程（不完整）
