Updated 前端安装 (markdown)

--- a/前端安装.md
+++ b/前端安装.md
@@ -36,8 +36,8 @@ web环境配置好后
 
 ```
 cd /你的网站目录  例：cd /www/wwwroot/你的网站目录  
-yum update
-yum install git -y
+apt update
+apt install git -y
 git clone -b master https://github.com/Anankke/SSPanel-Uim.git tmp && mv tmp/.git . && rm -rf tmp && git reset --hard
 chown -R root:root *
 chmod -R 755 *
